# model_registry

./: .gitignore  README.md  feed.xml  models.json  pyproject.toml
.github/events/: dispatch.json
.github/workflows/: refresh_model_registry.yml
docs/: overview.md  todo.md
src/model_registry/: __init__.py  feed.py  logger.py  main.py  schemas.py
src/model_registry/providers/: anthropic.py  base.py  gemini.py  openai.py  openrouter.py
src/model_registry/utils/: utils.py
tests/: test_cli.py  test_logging.py  test_schema.py
tests/integration/: test_integration.py
tests/unit/: test_anthropic.py  test_feed.py  test_gemini.py  test_openai.py  test_openrouter.py  test_provider_base.py
